...
                            <connections>
                                <action selector="homeButtonHandler:" destination="-1" eventType="touchUpInside" id="H0x-o2-OeR"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JB7-UU-tTB">
                            <rect key="frame" x="65" y="0.0" width="82" height="30"/>
                            <state key="normal" title="Card details"/>
                            <connections>
                                <action selector="presentCardDetailsData:" destination="-1" eventType="touchUpInside" id="mKC-3f-FzF"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ly9-kT-Nno">
                            <rect key="frame" x="171" y="0.0" width="96" height="30"/>
...
